--- a/src/pages/expenses/expenses.scss
+++ b/src/pages/expenses/expenses.scss
@@ -2,3 +2,14 @@ ion-grid {
   padding: 0 !important;
   margin: 0 !important;
 }
+
+page-expenses {
+  #budget {
+    font-size: 0.7em;
+  }
+
+  #date {
+    font-size: 0.7em;
+    text-align: right;
+  }
+}
